public/stylesheets/style.css
@font-face {
  font-family: "margo";
  src: url("Margo_Condensed_v0.1-Medium.woff") format('woff');
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
	width: 100%;
	height: 100vh;
	color: #1F1F1F;
  font-family: 'Karla', sans-serif;
  font-weight: 400;
  font-style: normal;

}

main {
  margin: 1.5em 1.8em 1.8em 3em;
  font-size: 1.2em;
}

.row:nth-child(odd) {
  margin-top: 300px;
}

/* navbar */
nav {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin: 1.5em 1.5em 1.5em 2.5em;
}

.sticky {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
}

#nav-ul {
 align-self: center;
 z-index: 1;
}

nav path {
  opacity: 70%;
}

#logo {
  z-index: 1;
  /* content:url("../images/Symbols/appeciate\ logo.png"); */
  width: 90px;
  height: 90px;
}

#nav-blob { 
  display: none;
}

#nav-ul li:nth-child(1), #info-body h1 {
  font-family: margo, sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2em;
}

#nav-ul li:nth-child(2), #about-body h1 {
  font-family: suburban, sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 2em;
}

#nav-ul li:nth-child(3), #scan-body h1 {
  font-family: arvo, serif;
  font-weight: 400;
  font-style: normal;

}

nav ul li {
  display: inline-block;
  padding: 10px 20px;
  font-size: 1.4em;
}

.hamburger {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  display: none;
  z-index: 1;
}

a {
  text-decoration: none;
  color: #1F1F1F;
}

/* buttons for home page */
/* .index main #submissions { */
  /* margin-top: 45%; */
/* } */

button h1 {
  font-size: 12rem;
  margin: 0;
}

#buttons p {
  text-align: center;
  color: white;
}

#buttons img {
  /* width: 120px; */
  width: 100%;
  max-width: 200px;
  margin: 0;
  -webkit-filter: brightness(0) invert(1);
          filter: brightness(0) invert(1);

}

#buttons button {
  /* width: 120px; */
  width: 100%;
  margin: 0;
}

#buttons svg {
  position: absolute;
  width: 55%;
  margin: 0;
  opacity: 50%;
  max-width: 250px;
}

.first-section {
  display: flex;
  /* flex-wrap: wrap; */
  flex-direction: column;
  justify-content: center;
}

.second-section {
  display: flex;
  flex-direction: column;
  /* flex-wrap: wrap; */
  justify-content: center;
}

.buttons {
  display: flex;
  /* flex-wrap: wrap; */
  justify-content: center;
  flex-direction: row;
}

button {
  text-align: center;
  align-self: center;
  margin: 0.5em;
  background-color: transparent;
  border: none;
}

button:hover {
  cursor: pointer;
}

#q1 {
  font-family: termina, sans-serif;
  font-weight: 400;
  font-style: normal;
}

#q2 {
  font-family: margo, sans-serif;
  font-weight: 400;
  font-style: normal;
}

/* ============ FORMS ============= */
@media screen and (min-width: 1050px){
  #form-blob {
    max-height: 60vh;
    bottom: 0;
  }
.share-form {
    bottom: 0;
  }
}

@media screen and (max-width: 700px){
  #care-body h1 {
    font-size: 1.6em;
  }
}

@media screen and (max-width: 450px){
  #buttons svg {
    max-width: 180px;
  }
}

#care-body .forms input[type=submit]:nth-child(1) {
  display: block;
  margin-left: auto;
  margin-right: 50px;
  margin-top: 25px;
}

#form-blob {
  opacity: 80%;
  margin: 0;
  position: absolute;
  top: 50%;
  margin: auto;
  left: 0;
  right: 0;
  transform: translateY(-25%);
  z-index: -1;
  max-height: 60vh;
}

/* .forms form { */
.share-form {
  max-width: 350px;
  margin: auto;
  position: absolute;
  top: 55%;
  left: 0;
  right: 0;
  transform: translateY(-25%);
}

.forms form input {
  font-size: 0.9em;
  border: none;
  background-color: transparent;
  cursor: pointer;
  z-index: 99;
}

#form-1 {
  font-family: termina, sans-serif;
  font-weight: 400;
  font-style: normal;
}
#form-1 input[type=submit] {
  font-size: 1em;
}

#form-1 input[type=text]::-webkit-input-placeholder {
  color: #D12824;
}

#form-1 input[type=text]::-moz-placeholder {
  color: #D12824;
}

#form-1 input[type=text]:-ms-input-placeholder {
  color: #D12824;
}

#form-1 input[type=text]::-ms-input-placeholder {
  color: #D12824;
}

#form-1 input[type=text]::placeholder {
  color: #D12824;
}

.forms input[type=text] {
  color: #D12824;
  display: block;
  margin: auto;
  margin-top: 100px;
}

.forms form:first-of-type input[type=submit] {
  border: 1px solid black;
  border-radius: 30px;
  padding: 5px 10px;
}

.forms input[type=submit] {
  display: block;
  margin-left: auto;
  margin-right: 50px;
  margin-top: 35px;
}

#just-answers input[type=submit] {
  display: block;
  margin: auto;
  margin-top: 100px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  transform: translateY(-25%);
}

.forms h1 {
  line-height: 1.2;
}

.hide {
  display: none;
}

.buttons-hide {
  display: none;
}

/* ============ INFO PAGE ============= */
#info-body {
  line-height: 1.6;
}

#info-body h1 {
  font-size: 3em;
  margin-bottom: 0;
  margin-top: 0;
}

#pdf-button {
  max-width: 235px;
  border: 6px solid black;
  border-radius: 40px;
  text-align: center;
  display: block;
  margin: 45px auto;
  font-size: 1em;
  padding: 18px 45px;
}

#info-body .tip-heading {
  margin-bottom: 0;
  margin-top: 30px;
  font-weight: 700;
  /* color: #D12824; */
}

#info-body p:nth-child(n+3) {
  margin-top: 0;
}

#info-body footer {
  margin: 110px 3em;
  padding-bottom: 10px;
  color: #DDD8CE;
}

#info-body ul li {
  list-style: none;
}

#info-body .link-ul a {
  text-decoration: underline;
}

#info-body .link-ul {
  padding-left: 0;
  margin-top: 0;
}

#info-body p:last-of-type {
  margin-bottom: 0;
}
/* ======================== */
/* ++++++++ ANSWERS ++++++++*/
/* ======================== */
#submissions {
  margin: 0;
  margin-top: 10%;
  padding: 0;
  width: 900px;
}

.blob-sub {
  display: flex;
  justify-content: center;
  /* align-content: center; */
  flex-wrap: wrap;
  /* height: 100%; */
}

.svg-content {
  display: flex;
  justify-content: center;
  align-content: center;
  /* flex-wrap: wrap; */
  height: 100%;
}
/* ... */

